# postgres-homeworks

homework-1/: config.py  create_tables.sql  main.py  pyproject.toml
homework-2/: filter_sorting.sql  groupby.sql  pyproject.toml  simple_queries.sql
homework-3/: pyproject.toml  queries.sql
homework-4/: alter_northwind.sql  alter_student.sql  pyproject.toml
